--- a/第081天.md
+++ b/第081天.md
@@ -2,7 +2,7 @@
 
 ### 涅磐！
 
-亲爱的俊杨，良久未曾写下文字。每每念及，心中总似盘丝剥离。索尽记忆，找不到一个字字，可以形容我的平淡无奇；也找不到一句话，可以将我的心声传达。
+亲爱的俊杨，良久未曾写下文字。每每念及，心中总似盘丝剥离。索尽记忆，找不到一个字，可以形容我的平淡无奇；也找不到一句话，可以将我的心声传达。
 
 你还好吗？终于体味到了也许一辈子都体会不到的**；了解到了为何有的人会眼中常含泪水。或许有一天，一切都会好的，包括我，包括你，也包括我们的未来。
 
@@ -18,11 +18,11 @@
 
 前些天，遇到了一个与你很像的人。有一刻，心动了一下，不知道是因为与你相似还是别的什么。
 
-今天，再次相逢。或许是命运的捉弄，也或许是上天赐予的机缘，我该如何把握？
+今天，再次相逢。或许是命运的捉弄，也或许是上天赐予的机缘，我该何去何从？
 
 我一直在执著，执著于任凭岁月不再青葱，也要与你比肩携行；可是有一天，有一天你走了，留我一人，留我一人孤身风雨中。
 
-一次又一次，我可以了却一切凡尘过往，可以阻隔一切善意点化。唯独无法将你放下，心心念念，尽是你。幸福的过往，无情的背叛。
+一次又一次，我可以了却一切凡尘过往，阻隔一切善意点化。唯独无法将你放下，心心念念，尽是你。幸福的过往，无情的背叛。
 
 你还好吗？你离开后，我给自己设了一个期限。这段时间，不管怎样，我都不会爱上任何人，也不会和任何人在一起。期限临近，对我来说，是解脱？还是折磨？
 
